--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<!-- <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:400,700|BenchNine:300" rel="stylesheet"> -->
 		<!-- <script src="js/angular.min.js"></script> -->
    		<!-- ******Angular Routing***** -->
-     	<!-- <script src="https://code.angularjs.org/1.2.28/angular-route.min.js"></script> -->
+     	<script src="https://code.angularjs.org/1.2.28/angular-route.min.js"></script>
 		<!-- Font Awesome -->
 		<script src="https://use.fontawesome.com/2415393c0d.js"></script>
 		<!-- Animate.css -->
