--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
 		<!-- ******Jquery GOOGLE CDN***** -->
 		<script src="js/jquery-3.1.1.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
-		<!-- <script src="js/animation.js"></script> -->
+		<script src="js/animation.js"></script>
 		<script src="js/main.js"></script>
 </html>
