coded the navigation

--- a/index.html
+++ b/index.html
@@ -22,6 +22,22 @@
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
+		<!--navigation start-->
+		<nav class="nav">
+			<div class="container">
+				<div class="col-xs-12">
+					<img src="img/logo.png" alt="logo" class="logo">
+					<ul>
+						<li><a href="#">What to Expect</a></li>
+						<li><a href="#">Browse Jewelery</a></li>
+						<li><a href="#">Gifts</a></li>
+						<li><button class="btn btn-md" type="button">Sign In</button></li>
+						<li><button class="btn btn-md join" type="button">Join Now</button></li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+		<!--navigation start-->
 		
 	
 		<!-- ******Jquery GOOGLE CDN***** -->
