--- a/index.html
+++ b/index.html
@@ -38,6 +38,53 @@
 			</div>
 		</nav>
 		<!--navigation start-->
+
+		<!--intro start-->
+		<section class="intro">
+			<div class="container">
+				<div class="col-xs-12">
+					<div id="myCarousel" class="carousel slide" data-ride="carousel">
+					  <!-- Indicators -->
+					  <ol class="carousel-indicators">
+					    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+					    <li data-target="#myCarousel" data-slide-to="1"></li>
+					    <li data-target="#myCarousel" data-slide-to="2"></li>
+					  </ol>
+
+					  <!-- Wrapper for slides -->
+					  <div class="carousel-inner" role="listbox">
+					    <div class="item active">
+					      <img src="img/intro1.jpg" alt="one">
+					    </div>
+
+					    <div class="item">
+					      <img src="img/intro2.jpg" alt="two">
+					    </div>
+
+					    <div class="item">
+					      <img src="img/intro3.jpg" alt="three">
+					    </div>
+					  </div>
+					</div>
+
+					<div class="intro-box">
+						<h2>
+							Access the Ultimate
+							<br>
+							Jewelry Collection
+						</h2>
+						<p>
+							<span>Handpicked and delivered to your door.</span>
+							<span>3 pieces at a time. Unlimited swaps.</span>
+							<span>Free shipping, cancel anytime.</span>
+						</p>
+						<input type="text" placeholder="Email Address">
+						<button class="btn">Join Now</button>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!--intro end-->
 		
 	
 		<!-- ******Jquery GOOGLE CDN***** -->
