coded the info section

--- a/index.html
+++ b/index.html
@@ -85,6 +85,41 @@
 			</div>
 		</section>
 		<!--intro end-->
+
+		<!--info start-->
+		<section class="info">
+			<div class="container info-bg">
+				<div class="row">
+					<div class="col-xs-12 col-sm-3">
+						<div class="info-box text-center">
+							<h4>Create a ProfileMake a Wish (List)</h4>
+							<p>Create a quick profile and startadding pieces to your Wish List to help your personal stylist gofrom 0 to BFF in one delivery.</p>
+						</div>
+					</div>
+					<div class="col-xs-12 col-sm-3 col-sm-offset-6">
+						<div class="info-box text-center">
+							<h4>Bring On TheCompliments</h4>
+							<p>We carry the trendiest jewelry from 30+ designers, giving youaccess to a collection that is theultimate in #accessorygoals.</p>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-12 col-sm-3">
+						<div class="info-box text-center">
+							<h4>Three's a Charm</h4>
+							<p>You'll get three amazing piecesto keep for as long as you want. Ready to change it up? Swap your box to receive a new set as often as you like.</p>
+						</div>
+					</div>
+					<div class="col-xs-12 col-sm-3 col-sm-offset-6">
+						<div class="info-box text-center">
+							<h4>Find True Love</h4>
+							<p>Can't bear to part with something? No worries! Redeem your $10monthly credit, buy pieces at a discount, plus get an extra $10 off when you keep your whole set!</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!--info end-->
 		
 	
 		<!-- ******Jquery GOOGLE CDN***** -->
