coded the site content section

--- a/index.html
+++ b/index.html
@@ -120,6 +120,102 @@
 			</div>
 		</section>
 		<!--info end-->
+
+		<!-- site-content start -->
+		<section class="site-content">
+			<div class="container">
+				<div class="subscription">
+					<div class="row">
+						<div class="text-center">
+							<h2>Our Subscription. Countless Statements.</h2>
+							<button class="btn btn-lg join" type="button">Join Now</button>
+						</div>
+					</div>
+				</div>
+				<div class="membership">
+					<div class="row">
+						<div class="col-xs-12">
+							<div class="text-center title">
+								<h4>Membership Perks</h4>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="content text-center">
+								<h4>Hit refresh on your look</h4>
+								<p>Ring in a new you! Pull together akk the outfits you already havein your closet with sparkly jewelery from us.</p>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="content text-center">
+								<h4>
+									Save money 
+									<br>
+									& Deeclutter
+								</h4>
+								<p>With Rocksbox, try new jewelry beforeyou buy for only $19/mo. Keep what youlove at a member discounted price.</p>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="content text-center">
+								<h4>Never shop for jewelery again</h4>
+								<p>We hunt down the best designerjewelry brands - you get to rock 'em.Sounds like a win-win to us!</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="access text-center">
+					<div class="row">
+						<div class="access-card text-center">
+							<h3>
+								Access the Ultimate 
+								<br>
+								Jewelry Collection
+							</h3>
+							<p>Add your favorite jewelry to your Wish List, and receive it in your first set. Create your Style Profile now!</p>
+							<div class="form">
+								<label for="email">Email Address</label>
+								<input type="email">
+
+								<label for="password">Password</label>
+								<input type="password">
+								<div class="buttons">
+									<button class="btn btn-md join" type="button">Join Now</button>
+									<span>OR</span>
+									<button class="btn btn-md face" type="button">
+										<i class="fa fa-facebook" aria-hidden="true"></i>Join WITH FACEBOOK</button>
+								</div>
+								<a href="#">Sign in ></a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="brands">
+					<div class="row">
+						<div class="col-xs-12">
+							<img src="img/icon1.jpg" alt="">
+							<img src="img/icon2.jpg" alt="">
+							<img src="img/icon3.jpg" alt="">
+							<img src="img/icon4.jpg" alt="">
+							<img src="img/icon5.jpg" alt="">
+							<img src="img/icon6.jpg" alt="">
+						</div>
+						<div class="col-xs-12">
+							<div class="content text-center">
+								<h5>
+									<span>Oh, Snap!</span>
+									Share your Rocksbox love with us on Instagram 
+									<br>
+									using <span class="blue">#ROCKSBOX </span>and we'll showcase it in the gallery below
+								</h5>
+
+								<hr>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- site-content end -->
 		
 	
 		<!-- ******Jquery GOOGLE CDN***** -->
